check task as done

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 				</div>
 			</div>
 			<div class="list-content">
-				<div class="task" data-id="1" data-status="done" data-priority="5">
+				<div class="task" data-id="1" data-status="to_do" data-priority="5">
 					<div class="task-status">
-						<input type="checkbox" id="cb1"><label for="cb1"></label>
+						<input type="checkbox" name="complete" id="cb1"><label for="cb1"></label>
 					</div>
 					<div class="task-content">
 						<p class="task-content-title"> Task #1</p>
@@ -45,9 +45,9 @@
 						<img class="delete-img" src="delete.svg">
 					</div>
 				</div>
-				<div class="task" data-id="2" data-status="done" data-priority="5">
+				<div class="task" data-id="2" data-status="to_do" data-priority="5">
 					<div class="task-status">
-						<input type="checkbox" id="cb2"><label for="cb2"></label>
+						<input type="checkbox" name="complete" id="cb2"><label for="cb2"></label>
 					</div>
 					<div class="task-content">
 						<p class="task-content-title"> Task #1</p>
@@ -57,9 +57,9 @@
 						<img class="delete-img" src="delete.svg">
 					</div>
 				</div>
-				<div class="task" data-id="3" data-status="done" data-priority="5">
+				<div class="task" data-id="3" data-status="to_do" data-priority="5">
 					<div class="task-status">
-						<input type="checkbox" id="cb3"><label for="cb3"></label>
+						<input type="checkbox" name="complete" id="cb3"><label for="cb3"></label>
 					</div>
 					<div class="task-content">
 						<p class="task-content-title"> Task #1</p>
