sort by priority

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 						<label for="filter-priotity">Sort by Priority</label>
 						<select id="filter-priotity" name="filter-priotity">
 						  <option value="all">None</option>
-						  <option value="done">ASC</option>
-						  <option value="to_do">DES</option>
+						  <option value="asc">ASC</option>
+						  <option value="des">DES</option>
 						</select>
 					</div>
 				</div>
@@ -45,7 +45,7 @@
 						<img class="delete-img" src="delete.svg">
 					</div>
 				</div>
-				<div class="task" data-id="2" data-status="to_do" data-priority="5">
+				<div class="task" data-id="2" data-status="to_do" data-priority="8">
 					<div class="task-status">
 						<input type="checkbox" name="complete" id="cb2"><label for="cb2"></label>
 					</div>
@@ -57,7 +57,7 @@
 						<img class="delete-img" src="delete.svg">
 					</div>
 				</div>
-				<div class="task" data-id="3" data-status="to_do" data-priority="5">
+				<div class="task" data-id="3" data-status="to_do" data-priority="2">
 					<div class="task-status">
 						<input type="checkbox" name="complete" id="cb3"><label for="cb3"></label>
 					</div>
