added date to header

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<div class="header-filter-priority">
 						<label for="filter-priotity">Sort by Priority</label>
 						<select id="filter-priotity" name="filter-priotity">
-						  <option value="all">None</option>
+						  <option value="none">None</option>
 						  <option value="asc">ASC</option>
 						  <option value="des">DES</option>
 						</select>
