added recalculate tasks

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 			<div class="list-header">
 				<div class="header-search"><input type="text" name="header-search" id="header-search" maxlength="255" placeholder="Enter search query"></div>
 				<div class="header-date">
-					<span class="bold-color" id="header-date-day">monday,</span>
-					<span id="header-date-month">March 14</span>
+					<span class="bold-color" id="header-date-day"></span>
+					<span id="header-date-month"></span>
 				</div>
 				<div class="header-filter">
 					<div class="header-filter-status">
@@ -71,7 +71,7 @@
 				</div>
 			</div>
 			<div class="list-footer">
-				<div><span class="light-color" id="tasks_count">4</span><span class="light-color">tasks</span></div>
+				<div><span class="light-color" id="tasks_count">4</span></div>
 				<div><span id="add_new">add new +</span></div>
 			</div>
 		</div>
