delete unused styles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<div class="list-header">
 				<div class="header-search"><input type="text" name="header-search" id="header-search" maxlength="255" placeholder="Enter search query"></div>
 				<div class="header-date">
-					<span class="bold-color" id="header-date-day"></span>
+					<span id="header-date-day"></span>
 					<span id="header-date-month"></span>
 				</div>
 				<div class="header-filter">
@@ -37,7 +37,7 @@
 				<p class="no-tasks active">There are no added tasks yet.</p>
 			</div>
 			<div class="list-footer">
-				<div><span class="light-color" id="tasks_count">0 tasks</span></div>
+				<div><span id="tasks_count">0 tasks</span></div>
 				<div><span id="add_new">add new +</span></div>
 			</div>
 		</div>
